--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,13 @@
+/*
+* File: style.css
+* Author: Bőgér Bence
+* Copyright: 2024, Bőgér Bence
+* Group: Szoft I-2-N
+* Date: 2024-04-03
+* Github: https://github.com/BoBenc/
+* Licenc: GNU GPL
+*/
+
 header {
     background-color: red;
     color: white;
